# Shuheng

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.trellis/: README.md
.trellis/spec/backend/: agent-control-protocol.md
.trellis/tasks/05-30-fix-secret-subagent-persistence-reuse/: prd.md
.trellis/tasks/06-01-smooth-tui-upstream-integration/: task.json
.trellis/tasks/06-04-extract-control-protocol-from-app/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-10-group-llm-models-by-provider/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-11-make-provider-list-vertical/: check.jsonl  task.json
.trellis/tasks/06-12-fuse-ohmypi-runtime-ga-memory/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/06-13-fix-temp-subagent-resolution/: prd.md  task.json
.trellis/tasks/06-15-default-omp-full-permissions/: check.jsonl  implement.jsonl  prd.md
.trellis/tasks/06-20-shuheng-genericagent-memory-mode/: prd.md  task.json
.trellis/tasks/06-20-shuheng-memory-workspace-redesign/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/06-23-fix-stalled-model-communication-turn/: prd.md  task.json
.trellis/tasks/06-24-persistent-agent-dashboard-panels/: prd.md  task.json
.trellis/tasks/06-27-tui-open-source-readiness/: info.md  prd.md  task.json
.trellis/tasks/06-28-open-source-release-readiness/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-29-fix-subagent-message-no-reply/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-30-first-principles-implementation-audit/: prd.md  task.json
.trellis/tasks/07-01-extract-compact-title-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-context-pack-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-dashboard-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-dashboard-status-card-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-governance-checkpoint-recovery-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-governance-plan-selection-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-governance-task-display-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-history-preview-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-history-response-body-parser/: prd.md  task.json
.trellis/tasks/07-01-extract-history-restore-message-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-history-title-policy-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-input-cursor-helpers/: prd.md  task.json
.trellis/tasks/07-01-extract-input-layout-helper/: prd.md  task.json
.trellis/tasks/07-01-extract-latest-user-message/: prd.md  task.json
.trellis/tasks/07-01-extract-path-utils/: prd.md  task.json
.trellis/tasks/07-01-extract-recent-history-items/: prd.md  task.json
.trellis/tasks/07-01-extract-rendering-boxed-user-lines-helper/: prd.md  task.json
.trellis/tasks/07-01-extract-rendering-inline-markdown-helper/: prd.md  task.json
docs/: agent-harness-architecture.md  app-py-decomposition-plan.md  install.md  public-alpha-readiness.md  runtime-provider-control-plane.md
docs/development/: index.md  release-engineering.md  runtime-governance.md  test-isolation.md
integrations/omp-ga-tui-plugin/: README.md  package.json
integrations/omp-shuheng-plugin/: README.md  package.json
integrations/pi-native-sidecar/: README.md  package-lock.json  package.json  sidecar.mjs
scripts/: check_policy_gates.py  check_release_hygiene.py  dogfood_stdio_gateway.py  install.sh  release_scan_rules.py  runtime_smoke.py  wheel_smoke.py
src/ga_tui/: __init__.py  agent_bridge.py  app.py  baseline.py  cli.py  commands.py  compat_legacy.py  context_packs.py  control_protocol.py  dashboard.py  gateway_registry.py  genericagent_provider.py  governance.py  history_store.py  history_titles.py  input_controller.py  integration.py  ledger_store.py  ohmypi_provider.py  path_utils.py  plugins.py  release_readiness.py  rendering.py  runtime.py  runtime_dispatch.py  runtime_evidence.py  scheduler.py  secret_vault.py  subagent_store.py  text_utils.py  ui_types.py  web_console.py  web_console_static.py  workflows.py
src/shuheng/: __init__.py  agent_bridge.py  agent_editor.py  agent_project_workspace.py  agent_projects.py  app.py  cli.py  commands.py  compat_legacy.py  context_packs.py  control_protocol.py  frontend_history_compat.py  gateway_registry.py  genericagent_provider.py  governance.py  history_store.py  history_titles.py  input_controller.py  integration.py  ledger_store.py  local_protocol_registry.py  ohmypi_provider.py  path_utils.py  pi_native_provider.py  plugins.py  release_readiness.py  runtime.py  runtime_dispatch.py  runtime_setup.py  scheduler.py  secret_vault.py  skill_installer.py  subagent_store.py  subagent_task_dispatch.py  ui_types.py  web_console.py  web_console_static.py  workflows.py
tests/: conftest.py  test_agent_bridge.py  test_agent_editor.py  test_agent_project_app.py  test_agent_projects.py  test_baseline_gateway_helpers.py  test_baseline_local_protocol_helpers.py  test_cell_utils.py  test_cli.py  test_commands.py  test_context_packs.py  test_control_protocol.py  test_credential_input.py  test_dashboard.py  test_governance.py  test_history_store.py  test_history_titles.py  test_input_controller.py  test_install_script.py  test_jsonl.py  test_model_config_security.py  test_ohmypi_environment_security.py  test_path_safety.py  test_pi_native_provider.py  test_plugins.py  test_release_hygiene.py  test_release_readiness.py  test_rendering.py  test_runtime_dispatch.py  test_runtime_evidence.py  test_runtime_setup.py  test_scheduler_parsing.py  test_secret_crypto.py  test_subagent_store.py  test_time_path_helpers.py  test_web_console.py  test_web_console_static.py  test_wheel_smoke.py  test_workflows.py
(+560 files in other folders)
