[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shuheng"
version = "0.1.0"
description = "Shuheng: governed terminal control plane for local agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyNaCl>=1.5.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "urllib3>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
shuheng = "ga_tui.app:main"
shuheng-agent-bridge = "ga_tui.agent_bridge:main"
shuheng-check = "ga_tui.integration:doctor_main"
shuheng-install-core-shim = "ga_tui.integration:install_core_shim_main"
shuheng-integration = "ga_tui.integration:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
